tests/compile_fail/display/unknown_attribute.stderr
error: Unknown attribute. Expected `"...", ...` or `bound(...)`
 --> tests/compile_fail/display/unknown_attribute.rs:3:11
  |
3 | #[display(unknown = "unknown")]
  |           ^^^^^^^
